<resources>
    <string name="app_name">Semana6Frakments</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_musica">Musica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_principal">Fragmentos en Android</string>
    <string name="valrbtmale">Male</string>
    <string name="valrfamele">Famele</string>
    <string name="valother">Other</string>

    <string name="valchklicens">License</string>
    <string name="valchkcar">car</string>
    <string name="valchksave">Save</string>
</resources>