<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistroFragment">

    <EditText
        android:id="@+id/etFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullname"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="233dp"
        android:layout_height="179dp"
        android:layout_marginTop="77dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrbtmale" />

        <RadioButton
            android:id="@+id/Famel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valrfamele" />

        <RadioButton
            android:id="@+id/Other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valother" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spmCount1"
        android:layout_width="172dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/checkLicens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkLicens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="157dp"
        android:text="@string/valchklicens"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="43dp"
        android:text="@string/valchkcar"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="227dp"
        android:layout_height="74dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="40dp"
        android:text="@string/valchksave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkLicens" />
</androidx.constraintlayout.widget.ConstraintLayout>